#pragma once

class IGeometryLocation
{
public:
    IGeometry* geometry;
    ILocation* location;
};